<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ShowAllListActivity">

    <TextView
        android:id="@+id/randomView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit"
        android:text="@string/rai_kor_ruk"
        android:ellipsize="none"
        android:maxLines="5"
        android:textAlignment="center"
        android:textColor="#403F3F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/randomArticleView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="@font/kanit_light"
        android:text="@string/oat"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomView"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/randomSourceView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="@font/kanit_light"
        android:text="@string/source2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomView"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/btnRandom"
        android:layout_width="379dp"
        android:layout_height="66dp"
        android:layout_marginTop="120dp"
        android:text="@string/random"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomView"
        android:textAllCaps="true"
        android:textColor="#0083B0"
        android:background="@drawable/custom_btn_gg"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:rotation="0"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="192dp"
        android:rotation="0"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgView" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/allCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:rotation="0"
        android:src="@drawable/book_icon"
        android:tint="@android:color/white"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgView"
        app:layout_constraintVertical_bias="0.897" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:rotation="45"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        app:backgroundTint="@android:color/secondary_text_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="528dp"
        android:layout_height="496dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="-60dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toEndOf="@+id/randomArticleView"
        app:layout_constraintTop_toTopOf="@+id/addButton"
        app:layout_constraintVertical_bias="0.593"
        app:srcCompat="@drawable/bg_blue"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/qL"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/ql"
        android:rotation="0"
        app:layout_constraintBottom_toTopOf="@+id/randomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/quote_icon" />

    <ImageView
        android:id="@+id/qL2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/ql"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomView"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/quote_icon" />

</android.support.constraint.ConstraintLayout>
